# comp8535-movielens-cf

./: .gitignore  LICENSE  LITERATURES_TO_READ.md  PLAN.md  README.md  RESULTS.md  pyproject.toml
config/: config.yaml
paper/: main.tex  refs.bib
results/: README.md
results/2026-04-17_baseline/: config_snapshot.yaml  results.json  summary.md
results/2026-04-20_headline/: results.json  summary.md
results/2026-04-26_ablations/: ablation_summary.csv  summary.md
results/2026-04-26_sensitivity/: sensitivity_summary.csv  summary.md
results/2026-04-27_ablations_v2/: ablation_summary.csv  summary.md
results/2026-04-27_classmetrics/: per_class_metrics.csv  results.json
results/2026-04-27_coldstart/: coldstart_buckets.csv  config_snapshot.yaml  results.json
results/2026-04-27_coldstart_v2/: coldstart_buckets.csv  results.json
results/2026-04-27_multisplit/: multisplit_summary.csv  per_split_summary.csv
results/2026-04-27_sensitivity_v2/: sensitivity_summary.csv  summary.md
results/2026-04-27_viz/: results.json  silhouette_scores.csv
results/2026-04-27_viz_v2/: results.json  silhouette_scores.csv
results/2026-04-28_gateheatmap/: gate_per_dim.csv  results.json
scripts/: render_ablations.py  render_results.py  run_ablations.py  run_classmetrics.py  run_coldstart.py  run_gate_analysis.py  run_gateheatmap.py  run_link_compare.py  run_ml1m.py  run_multisplit.py  run_reliability.py  run_sensitivity.py  run_visualization.py
src/: baselines.py  dataset.py  main.py  model.py  train.py  visualize.py
tests/: test_model.py
(+197 files in other folders)
