[project]
name = "comp8535-movielens-cf"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
